logs/dag_id=get_todays_gamesv2/run_id=manual__2023-05-02T00:41:33.002817+00:00/task_id=exec_insert_query_task/attempt=1.log
[2023-05-02T00:41:41.390+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: get_todays_gamesv2.exec_insert_query_task manual__2023-05-02T00:41:33.002817+00:00 [queued]>
[2023-05-02T00:41:41.401+0000] {taskinstance.py:1084} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: get_todays_gamesv2.exec_insert_query_task manual__2023-05-02T00:41:33.002817+00:00 [queued]>
[2023-05-02T00:41:41.401+0000] {taskinstance.py:1282} INFO - 
--------------------------------------------------------------------------------
[2023-05-02T00:41:41.402+0000] {taskinstance.py:1283} INFO - Starting attempt 1 of 1
[2023-05-02T00:41:41.402+0000] {taskinstance.py:1284} INFO - 
--------------------------------------------------------------------------------
[2023-05-02T00:41:41.425+0000] {taskinstance.py:1303} INFO - Executing <Task(PostgresOperator): exec_insert_query_task> on 2023-05-02 00:41:33.002817+00:00
[2023-05-02T00:41:41.431+0000] {standard_task_runner.py:55} INFO - Started process 32679 to run task
[2023-05-02T00:41:41.437+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'get_todays_gamesv2', 'exec_insert_query_task', 'manual__2023-05-02T00:41:33.002817+00:00', '--job-id', '717', '--raw', '--subdir', 'DAGS_FOLDER/todays_gamesv2.py', '--cfg-path', '/tmp/tmpixv8w9gm']
[2023-05-02T00:41:41.438+0000] {standard_task_runner.py:83} INFO - Job 717: Subtask exec_insert_query_task
[2023-05-02T00:41:41.550+0000] {task_command.py:388} INFO - Running <TaskInstance: get_todays_gamesv2.exec_insert_query_task manual__2023-05-02T00:41:33.002817+00:00 [running]> on host f789e77bc70a
[2023-05-02T00:41:41.672+0000] {taskinstance.py:1511} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=get_todays_gamesv2
AIRFLOW_CTX_TASK_ID=exec_insert_query_task
AIRFLOW_CTX_EXECUTION_DATE=2023-05-02T00:41:33.002817+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-05-02T00:41:33.002817+00:00
[2023-05-02T00:41:41.673+0000] {sql.py:254} INFO - Executing: 
INSERT INTO games (away_name,home_name,away_probable_pitcher,home_probable_pitcher,venue_name,game_date)
                                   VALUES ('Cleveland Guardians','New York Yankees','Tanner Bibee',
                                   'Gerrit Cole','Yankee Stadium,2023-05-02');
[2023-05-02T00:41:41.683+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-02T00:41:41.966+0000] {base.py:73} INFO - Using connection ID 'postgres_localhost' for task execution.
[2023-05-02T00:41:41.970+0000] {sql.py:375} INFO - Running statement: 
INSERT INTO games (away_name,home_name,away_probable_pitcher,home_probable_pitcher,venue_name,game_date)
                                   VALUES ('Cleveland Guardians','New York Yankees','Tanner Bibee',
                                   'Gerrit Cole','Yankee Stadium,2023-05-02');, parameters: None
[2023-05-02T00:41:41.972+0000] {taskinstance.py:1775} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/operators/sql.py", line 266, in execute
    **extra_kwargs,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 349, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 380, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: INSERT has more target columns than expressions
LINE 2: ...probable_pitcher,home_probable_pitcher,venue_name,game_date)
                                                             ^

[2023-05-02T00:41:41.984+0000] {taskinstance.py:1326} INFO - Marking task as FAILED. dag_id=get_todays_gamesv2, task_id=exec_insert_query_task, execution_date=20230502T004133, start_date=20230502T004141, end_date=20230502T004141
[2023-05-02T00:41:41.999+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 717 for task exec_insert_query_task (INSERT has more target columns than expressions
LINE 2: ...probable_pitcher,home_probable_pitcher,venue_name,game_date)
                                                             ^
; 32679)
[2023-05-02T00:41:42.009+0000] {local_task_job.py:212} INFO - Task exited with return code 1
[2023-05-02T00:41:42.041+0000] {taskinstance.py:2585} INFO - 0 downstream tasks scheduled from follow-on schedule check
